[tool.poetry]
name = "fove8n"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
argparse = "^1.4.0"
icecream = "^2.1.0"
numpy = "^1.20.2"
scipy = "^1.6.3"
scikit-image = "^0.18.1"
torch = "^1.8.1"
torchvision = "^0.9.1"
torchinfo = "^1.4.4"
tensorboard = "^2.5.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
